# userinfo

./: .gitignore  CMakeLists.txt  README.md
cmake/: userinfoConfig.cmake.in
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  userinfo.cpp
src/lib/include/userinfo/: userinfo.hpp
